更新项目代码和配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "java.configuration.maven.userSettings": "D:\\Program Files\\apache-maven-3.9.11\\conf\\settings.xml",
     "maven.terminal.useJavaHome": true,
     "java.configuration.updateBuildConfiguration": "automatic",
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "java.format.settings.url": ".vscode/java-formatter.xml"
 }
