--- a/pom.xml
+++ b/pom.xml
@@ -136,18 +136,38 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M9</version>
+                <configuration>
+                    <argLine>-Duser.language=zh_CN</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <testFailureIgnore>false</testFailureIgnore>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.9.2</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.10</version>
                 <executions>
-                    <!-- 在Maven test阶段之前准备JaCoCo运行时代理 -->
                     <execution>
                         <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <propertyName>jacoco.agent.argLine</propertyName>
+                        </configuration>
                     </execution>
-                    <!-- 在Maven test阶段之后生成代码覆盖率报告 -->
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
@@ -155,7 +175,6 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <!-- 添加代码覆盖率检查规则 -->
                     <execution>
                         <id>check</id>
                         <goals>
